SERVER-36881 Push merge-pipeline $limit stage to shards.